k8s/pgadmin4-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  labels:
    service: pgadmin4
spec:
  type: NodePort
  selector:
    app: pgadmin4
  ports:
  - port: 80
    targetPort: 80
